--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -23,18 +23,19 @@
   <view class='float-home' wx:if="{{homebtn}}" bindtap='tap_home'>
     <text class='iconfont icon-shouye' style='font-size:14px;'> 点此去首页发现更多精彩</text>
   </view>
+  <!-- 底部评论栏 -->
   <view class="bottom-bar">
     <input class='bottom-bar-input' placeholder="我来说两句" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
     <view class='icon-vertical-ab'>
-      <button class='{{niceClass}}' hover-class="none" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_nice"></button>
+      <button class='{{items[indexN].niceClass}}' hover-class="none" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_nice"></button>
       <view class='icon-text-box' style='left:63vw;'>
-        <view class='icon-text'>{{article.niceNum}}</view>
+        <view class='icon-text'>{{items[indexN].niceNum}}</view>
       </view>
     </view>
     <view class='icon-vertical' style='margin-left:14%'>
       <button class='iconfont icon-interactive_fill myicon' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_comment"></button>
       <view class='icon-text-box'>
-        <view class='icon-text'>{{article.cm_count}}</view>
+        <view class='icon-text'>{{items[indexN].cm_count}}</view>
       </view>
     </view>
     <view class='icon-vertical'>
@@ -47,7 +48,7 @@
     <view class="comment_box {{showModalStatus ? 'ct-state-1' : 'ct-state-2'}}">
       <button class='iconfont icon-guanbi comment_closebtn' style='font-size: 30rpx;' bindtap='commentClose'></button>
       <view class='comment_title_box'>
-        <view class='comment_count'>— {{cmt.length}}条评论 —</view>
+        <view class='comment_count'>— {{cmt[items[indexN].id].length}}条评论 —</view>
       </view>
       <scroll-view class='scroll-comment comment_item' scroll-y>
         <view wx:if="{{hotCmt}}" class='my_comment'>
@@ -76,7 +77,7 @@
             <text>{{hotCmt.commentDtl}}</text>
           </view>
         </view>
-        <view class='my_comment' wx:for="{{cmt}}" wx:key="item.commentId">
+        <view class='my_comment' wx:for="{{cmt[items[indexN].id]}}" wx:key="item.commentId">
           <view class='cmt-flex'>
             <image class='cmt-img-co' src='{{item.publishUserInfo.avatarUrl}}'></image>
             <view class='cmt-user'>
@@ -99,7 +100,7 @@
             <text>{{item.commentDtl}}</text>
           </view>
         </view>
-        <view wx:if="{{cmt.length}}" class='comment_title_box'>
+        <view wx:if="{{cmt[items[indexN].id].length}}" class='comment_title_box'>
           <view class='comment_count'>— 到底啦 —</view>
         </view>
         <view wx:else class='comment_title_box'>
